/*
 * $Id: ChangeLog,v 1.3535 2004/10/25 03:07:23 kaddath Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-10-25 14:35 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  + contrib/gtwvw
  + contrib/gtwvw/gtwvw.c
  + contrib/gtwvw/hbgtwvw.h
  + contrib/gtwvw/makefile.bc
  + contrib/gtwvw/make_b32.bat

  /* latest version of gtwvw */

2004-09-24 20:06 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * hrbdll.bc
  * makefile.bc
  * hrbdll.vc
  * hrbdll.wc
  * makefile.wc
    ! missed a few lines from previous fix

2004-09-24 18:56 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * hrbdll.bc
  * makefile.bc
  * makefile.nt
  * hrbdll.vc
  * makefile.vc
  * hrbdll.wc
  * makefile.wc
    ! added missing source/lang/msg*.c files

2004-10-24 20:00 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  - xharbour/source/ct/SETCLEAR.C
  + xharbour/source/ct/setclear.c
  - xharbour/source/ct/alt/CTWIN.PRG
  + xharbour/source/ct/alt/ctwin.prg
   * renamed to lower letters

  * xharbour/source/ct/ctwin.c
  * xharbour/source/rtl/gtapi.c
   ! fixed casting, CPP compilation (OpenWatcom) and removed unused
     vars

2004-10-24 12:00 UTC+0200 Henryk Olkowski <oh1@op.pl>
  * source/rtl/gt_tpl/gt_tpl.c
  * source/rtl/gtalleg/gtalleg.c
  * source/rtl/gtcrs/gtcrs.c
  * source/rtl/gtdos/gtdos.c
  * source/rtl/gtos2/gtos2.c
  * source/rtl/gtsln/gtsln.c
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxwc/gtxwc.c

    * replaced fpBlank value ( ' ' --> hb_ctGetClearB() )


2004-10-23 23:00 UTC+0200 Henryk Olkowski <oh1@op.pl>
  + source/ct/ctwin.c
  - source/ct/ctwin.prg ( --> source/ct/alt/ctwin.prg )
  + source/ct/setclear.c
  * include/ctwin.h
  * include/hbapigt.h
  * source/rtl/console.c
  * source/rtl/gtapi.c
  * source/rtl/maxrow.c
  * source/rtl/setpos.c